added message for missing search params

--- a/src/app/certificate-display/certificate-display.component.html
+++ b/src/app/certificate-display/certificate-display.component.html
@@ -17,11 +17,11 @@
             </p>
         </mat-card-content>
 
-        <mat-card-actions>
+        <!-- <mat-card-actions>
             <button (click)="returnToReferrer" mat-raised-button color=primary>
                 RETURN TO WHERE I CAME FROM
             </button> 
-        </mat-card-actions>
+        </mat-card-actions> -->
 
     </mat-card>
 
