--- a/src/app/decode-certificate/decode-cert.component.scss
+++ b/src/app/decode-certificate/decode-cert.component.scss
@@ -2,6 +2,15 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+
+    .no-data {
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-size: 24px;
+    }
+
 }
 
 table {
