--- a/src/app/certificate-display/certificate-display.component.scss
+++ b/src/app/certificate-display/certificate-display.component.scss
@@ -15,8 +15,7 @@
     }
 
     .mat-card-actions,
-    .mat-card-content,
-    .status {
+    .mat-card-content {
         display: flex;
         align-items: center;
         justify-content: center;
