--- a/src/app/decode-certificate/decode-cert.component.scss
+++ b/src/app/decode-certificate/decode-cert.component.scss
@@ -1,3 +1,13 @@
+.status {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0;
+    padding: 1%;
+    font-size: 20px;
+    font-weight: 600;
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -5,10 +15,10 @@
 
     .no-data {
         width: 100%;
+        margin-top: 1%;
+        text-align: center;
         align-items: center;
         justify-content: center;
-        text-align: center;
-        font-size: 24px;
     }
 
 }
@@ -20,6 +30,7 @@ table {
     .mat-header-cell {
         font-size: 16px;
     }
+
 }
 
 @media screen and (max-width: 1360px) {
