added build number retrieval

--- a/src/app/certificate-display/certificate-display.component.html
+++ b/src/app/certificate-display/certificate-display.component.html
@@ -9,6 +9,10 @@
         
         <app-decode-cert [certificate]='apiResponse'></app-decode-cert>
 
+        <mat-card-content class="build">
+            {{ buildNumber }}
+        </mat-card-content>
+
     </mat-card>
 
 </div>
