--- a/src/app/certificate-display/certificate-display.component.html
+++ b/src/app/certificate-display/certificate-display.component.html
@@ -3,7 +3,7 @@
 
         <mat-card-header>
             <div mat-card-avatar class="header-image"></div>
-            <mat-card-title>AirReps Seller Check</mat-card-title>
+            <mat-card-title>AirReps Verification Check</mat-card-title>
             <mat-card-subtitle>If a trusted certificate has been issued for the requested seller, their details will be displayed beneath.</mat-card-subtitle>
         </mat-card-header>
         
