--- a/src/app/certificate-display/certificate-display.component.scss
+++ b/src/app/certificate-display/certificate-display.component.scss
@@ -4,8 +4,8 @@
     flex-direction: row;
 
     .card {
-        min-width: 450px;
-        min-height: 400px;
+        // min-width: 450px;
+        // min-height: 400px;
         width: 100%
     }
 
